--- a/sample/2d/index.html
+++ b/sample/2d/index.html
@@ -9,14 +9,19 @@
 	<button id="playButton">Play</button><br/>
 	<button id="submitTask">Submit</button><br/>
 
-	<canvas id="channelCanvas" width="256" height="256"></canvas>
-	<canvas id="segCanvas" width="256" height="256"></canvas>
-	<canvas id="bufferCanvas" width="128" height="128"></canvas>
+	<div id="loadingText" style="font-size: 24px; display: none;">Loading </div>
+
+	<canvas id="channelCanvas" style="display: none;" width="256" height="256"></canvas>
+	<canvas id="segCanvas" style="display: none;"  width="256" height="256"></canvas>
+	<canvas id="bufferCanvas" style="display: none;"  width="128" height="128"></canvas>
 
 	<div id="assignedTask"></div>
 	Selected:<div id="selected"></div>
 	Results:<div id="results"></div><br/>
 	Use the j and k keys to change the displayed tile.
+
+
 </body>
+<script src="../common.js"></script>
 <script src="main.js"></script>
 </html>
