optimized loading of tiles, using tutorial view, optimized energy usage, added tile indicator in 3d view

--- a/sample/3d/index.html
+++ b/sample/3d/index.html
@@ -3,12 +3,9 @@
 <head>
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
-	<script src="Bbox.js"></script>
+	<script src="THREESegment.js"></script>
 </head>
 <body>
-	<button id="playButton">Play</button><br/>
-	<button id="submitTask">Submit</button><br/>
-
 	<div id="loadingText" style="font-size: 24px; display: none;">Loading </div>
 
 	<canvas id="channelCanvas" style="display: none;" width="256" height="256"></canvas>
@@ -16,15 +13,6 @@
 	<canvas id="bufferCanvas" style="display: none;"  width="128" height="128"></canvas>
 
 	<div id="3dContainer"></div>
-
-	<div id="assignedTask"></div>
-	Selected:<div id="selected"></div>
-	Results:<div id="results"></div><br/>
-	Use the j and k keys to change the displayed tile.
-
-
 </body>
-<script src="OBJLoader.js"></script>
-<script src="../common.js"></script>
 <script src="main.js"></script>
 </html>
