--- a/sample/3d/index.html
+++ b/sample/3d/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<div id="loadingText" style="font-size: 24px; display: none;">Loading </div>
+	<br/>
+	<div id="instructions" style="font-size: 24px;">w = up, s = down, click on 2d image to select and deselect segments, hover mouse over 3d view to change viewing angle</div>
+	<br/>
 
 	<canvas id="channelCanvas" style="display: none;" width="256" height="256"></canvas>
 	<canvas id="segCanvas" style="display: none;"  width="256" height="256"></canvas>
