--- a/sample/3d/index.html
+++ b/sample/3d/index.html
@@ -10,9 +10,9 @@
 	<br/>
 	<div id="instructions" style="font-size: 24px;">w = up, s = down, click on 2d image to select and deselect segments, hover mouse over 3d view to change viewing angle</div>
 	<br/>
+	<div id="progress" style="font-size: 24px;"></div>
 
 	<canvas id="channelCanvas" style="display: none;" width="256" height="256"></canvas>
-	<canvas id="segCanvas" style="display: none;"  width="256" height="256"></canvas>
 	<canvas id="bufferCanvas" style="display: none;"  width="128" height="128"></canvas>
 
 	<div id="3dContainer"></div>
