easier to set 3d dimensions

--- a/sample/3d/index.html
+++ b/sample/3d/index.html
@@ -15,7 +15,7 @@
 	<canvas id="channelCanvas" style="display: none;" width="256" height="256"></canvas>
 	<canvas id="bufferCanvas" style="display: none;"  width="128" height="128"></canvas>
 
-	<div id="3dContainer"></div>
+	<div id="3dContainer" style="width: 500px; height: 500px;"></div>
 </body>
 <script src="main.js"></script>
 </html>
